tests/ui/never_type/regress/issue-52443.stderr
warning: denote infinite loops with `loop { ... }`
  --> $DIR/issue-52443.rs:6:11
   |
LL |     [(); {while true {break}; 0}];
   |           ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
  --> $DIR/issue-52443.rs:2:10
   |
LL |     [(); & { loop { continue } } ];
   |          ^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
help: consider removing the borrow
   |
LL -     [(); & { loop { continue } } ];
LL +     [(); { loop { continue } } ];
   |

error[E0308]: mismatched types
  --> $DIR/issue-52443.rs:4:17
   |
LL |     [(); loop { break }];
   |                 ^^^^^ expected `usize`, found `()`
   |
help: give the `break` a value of the expected type
   |
LL |     [(); loop { break 42 }];
   |                       ++

error[E0277]: the trait bound `std::ops::RangeFrom<usize>: const Iterator` is not satisfied
  --> $DIR/issue-52443.rs:9:21
   |
LL |     [(); { for _ in 0usize.. {}; 0}];
   |                     ^^^^^^^^ required by a bound introduced by this call
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL
   = note: required for `std::ops::RangeFrom<usize>` to implement `const IntoIterator`

error[E0277]: the trait bound `std::ops::RangeFrom<usize>: const Iterator` is not satisfied
  --> $DIR/issue-52443.rs:9:21
   |
LL |     [(); { for _ in 0usize.. {}; 0}];
   |                     ^^^^^^^^
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL

error: aborting due to 4 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
